objects/CMPL123CME__EU_MIR_Required_Code_Type_and_Choice__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__EU_MIR_Code_Type_and_Choice__c</fullName>
        <label>EU MIR Code Type and Choice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Field_Set_Name__c</fullName>
        <label>Field Set Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>EU MIR Required Code Type and Choice</label>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>MasterLabel</columns>
        <columns>CMPL123CME__Field_Set_Name__c</columns>
        <columns>CMPL123CME__Required__c</columns>
        <columns>CMPL123CME__EU_MIR_Code_Type_and_Choice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>EU MIR Required Code Types and Choices</pluralLabel>
</CustomObject>